加上了github第三方api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 
 server.port=8887
+github.client.id=7f04a79c485da349b6ad
+github.client.secret=54f0440c5f2af19620fe074aac20d94ee15799f1
+github.redirect.uri=http://localhost:8887/callback
