--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 
 server.port=8887
+
 github.client.id=7f04a79c485da349b6ad
 github.client.secret=54f0440c5f2af19620fe074aac20d94ee15799f1
 github.redirect.uri=http://localhost:8887/callback
+
+spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.type-aliases-package=com.lhh.community.dto
+
