--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.type-aliases-package=com.lhh.community.dto
 
+#是否开启缓存，默认为true，开发时可设置为false
+spring.thymeleaf.cache=false
